--- a/JKCalendar/JKCalendarCell.xib
+++ b/JKCalendar/JKCalendarCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D17a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D17a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -17,12 +17,12 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="JKCalendarCell" id="9ll-Wp-K1h" customClass="JKCalendarCell" customModule="JKCalendar" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i7v-IT-JOo">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i7v-IT-JOo">
                         <rect key="frame" x="0.0" y="15" width="50" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -31,6 +31,8 @@
                 </subviews>
             </view>
             <constraints>
+                <constraint firstItem="i7v-IT-JOo" firstAttribute="leading" secondItem="9ll-Wp-K1h" secondAttribute="leading" id="gcE-3m-1xs"/>
+                <constraint firstAttribute="trailing" secondItem="i7v-IT-JOo" secondAttribute="trailing" id="gxc-CU-ekn"/>
                 <constraint firstItem="i7v-IT-JOo" firstAttribute="centerX" secondItem="9ll-Wp-K1h" secondAttribute="centerX" id="pO8-TQ-veu"/>
                 <constraint firstItem="i7v-IT-JOo" firstAttribute="width" secondItem="9ll-Wp-K1h" secondAttribute="width" id="rJp-Re-c0i"/>
                 <constraint firstItem="i7v-IT-JOo" firstAttribute="centerY" secondItem="9ll-Wp-K1h" secondAttribute="centerY" id="wB3-AJ-sI2"/>
@@ -38,4 +40,9 @@
             <point key="canvasLocation" x="4" y="-365"/>
         </collectionViewCell>
     </objects>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
+    </simulatedMetricsContainer>
 </document>
