--- a/JKCalendar/JKCalendarCell.xib
+++ b/JKCalendar/JKCalendarCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D17a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D17a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,11 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner">
-            <connections>
-                <outlet property="test" destination="i7v-IT-JOo" id="oq8-p3-EQh"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="JKCalendarCell" id="9ll-Wp-K1h" customClass="JKCalendarCell" customModule="JKCalendar" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -22,7 +18,16 @@
                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i7v-IT-JOo">
+                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZO9-Hv-JcL">
+                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                        <color key="backgroundColor" red="1" green="0.17077350699999999" blue="0.1232428626" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="50"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i7v-IT-JOo">
                         <rect key="frame" x="0.0" y="15" width="50" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -33,16 +38,19 @@
             <constraints>
                 <constraint firstItem="i7v-IT-JOo" firstAttribute="leading" secondItem="9ll-Wp-K1h" secondAttribute="leading" id="gcE-3m-1xs"/>
                 <constraint firstAttribute="trailing" secondItem="i7v-IT-JOo" secondAttribute="trailing" id="gxc-CU-ekn"/>
+                <constraint firstItem="ZO9-Hv-JcL" firstAttribute="leading" secondItem="9ll-Wp-K1h" secondAttribute="leading" id="n1o-Ce-4VX"/>
                 <constraint firstItem="i7v-IT-JOo" firstAttribute="centerX" secondItem="9ll-Wp-K1h" secondAttribute="centerX" id="pO8-TQ-veu"/>
                 <constraint firstItem="i7v-IT-JOo" firstAttribute="width" secondItem="9ll-Wp-K1h" secondAttribute="width" id="rJp-Re-c0i"/>
+                <constraint firstItem="ZO9-Hv-JcL" firstAttribute="top" secondItem="9ll-Wp-K1h" secondAttribute="top" id="sVB-1T-tt8"/>
                 <constraint firstItem="i7v-IT-JOo" firstAttribute="centerY" secondItem="9ll-Wp-K1h" secondAttribute="centerY" id="wB3-AJ-sI2"/>
+                <constraint firstAttribute="trailing" secondItem="ZO9-Hv-JcL" secondAttribute="trailing" id="xZH-GI-dms"/>
+                <constraint firstAttribute="bottom" secondItem="ZO9-Hv-JcL" secondAttribute="bottom" id="yXL-5E-UQ7"/>
             </constraints>
+            <connections>
+                <outlet property="selectionView" destination="ZO9-Hv-JcL" id="yD8-GW-mKc"/>
+                <outlet property="test" destination="i7v-IT-JOo" id="ad8-Zx-JTY"/>
+            </connections>
             <point key="canvasLocation" x="4" y="-365"/>
         </collectionViewCell>
     </objects>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
-    </simulatedMetricsContainer>
 </document>
