--- a/JKCalendar/Base.lproj/Main.storyboard
+++ b/JKCalendar/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Example" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -22,8 +22,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ANU-gH-HHT" customClass="JKCalendar" customModule="JKCalendar" customModuleProvider="target">
-                                <rect key="frame" x="57" y="84" width="263" height="500"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ANU-gH-HHT" customClass="JKCalendar" customModule="JKInfniniteCalendar">
+                                <rect key="frame" x="56" y="84" width="263" height="500"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
@@ -35,6 +35,9 @@
                             <constraint firstItem="ANU-gH-HHT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jeo-GF-Hfg"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="calendar" destination="ANU-gH-HHT" id="mtT-c1-vHP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
